PAGOPA-1619 fixing issue